--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,601 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-family: "Nunito", sans-serif;
+  font-size: 22px;
+  color: #fff;
+}
+
+body {
+  min-height: 100vh;
+  background-color: dodgerblue;
+  display: flex;
+  justify-content: center;
+}
+
+/* HEADER */
+/* Header */
+header {
+  background: linear-gradient(to right, rgb(30, 30, 30) 55%, blue);
+  color: palegoldenrod;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  width: 450px;
+}
+
+.header__title__line {
+  padding: 0.3rem 0.3rem 0.2rem 0.3rem;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1rem;
+}
+
+.header__div {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.header__anchor {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.header__img {
+  width: 2.8em;
+  height: auto;
+  font-size: 1.8rem;
+  margin-left: 0.4em;
+}
+
+.header__img:hover {
+  transition: 0.5s;
+  scale: 1.1;
+}
+
+.header__web__title {
+  font-family: "Montserrat";
+  letter-spacing: 0.35vw;
+  margin-left: 1rem;
+  /*  font-size: Your font size value */
+  color: gainsboro;
+}
+
+.header__web__title:hover {
+  transition: 0.5s;
+  scale: 1.1;
+}
+
+.menu-button {
+  background-color: transparent;
+  border: none;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin: 0;
+}
+
+/* Menu Icon */
+.menu-icon,
+.menu-icon::before,
+.menu-icon::after {
+  background-color: rgb(255, 255, 255);
+  width: 40px;
+  height: 5px;
+  border-radius: 5px;
+  position: absolute;
+  transition: all 0.5s;
+}
+
+.menu-icon::before,
+.menu-icon::after {
+  content: "";
+}
+
+.menu-icon::before {
+  transform: translate(0px, -12px);
+}
+
+.menu-icon::after {
+  transform: translate(0px, 12px);
+}
+
+header:hover .menu-icon,
+header:focus-within .menu-icon {
+  background-color: transparent;
+  transform: rotate(720deg);
+  transition: all 1.2s;
+}
+
+header:hover .menu-icon::before,
+header:focus-within .menu-icon::before {
+  transform: rotate(45deg);
+  transition: all 0.5s;
+}
+
+header:hover .menu-icon::after,
+header:focus-within .menu-icon::after {
+  transform: rotate(-45deg);
+  transition: all 0.5s;
+}
+
+/* Navigation */
+header:hover nav,
+header:focus-within nav {
+  background: linear-gradient(to right, rgb(18, 18, 18) 55.5%, blue);
+}
+
+@media (min-width: 1024px) {
+  header:hover nav,
+  header:focus-within nav {
+    display: block;
+  }
+}
+@media (max-width: 1023px) {
+  .active {
+    display: block;
+  }
+}
+nav {
+  display: none;
+  transform-origin: top center;
+  animation: showMenu 0.5s ease-in-out forwards;
+  position: absolute;
+  top: 100%; /* Adjust this value as needed */
+  left: 0;
+  right: 0;
+}
+
+@keyframes showMenu {
+  0% {
+    transform: scaleY(0);
+  }
+  80% {
+    transform: scaleY(1.2);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+nav li {
+  padding: 0.5rem;
+  border-top: 1px solid rgb(255, 255, 255);
+  display: block;
+  text-align: center;
+  width: 80%;
+  margin: auto;
+  color: rgb(255, 255, 255);
+  font-size: 1.25rem;
+}
+
+nav li:hover,
+nav li:focus {
+  transform: scale(1.08);
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+/* END OF HEADER */
+
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  min-height: 84vh;
+  padding: 0.3rem 0 0 0;
+  max-width: 600px;
+  width: 450px;
+  position: relative;
+  /* border-right: 2px black outset;
+  border-left: 2px black outset; */
+}
+
+button a {
+  text-decoration: none;
+  color: #000;
+}
+
+.Nav {
+  width: 100%;
+  background-color: #333333eb;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+  flex-direction: row;
+  margin-bottom: 0.15rem;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.Nav button {
+  padding: 0.45rem;
+  margin: 13px 16px;
+  font-size: 0.9rem;
+}
+
+.Nav button:hover,
+.Nav button:focus,
+.Nav button:hover a,
+.Nav button:focus a {
+  background-color: #ffffff;
+  color: #333;
+}
+
+.Nav button:hover,
+.Nav button:focus,
+.Nav button:hover a,
+.Nav button:focus a {
+  cursor: pointer;
+}
+
+.list-name {
+  text-align: center;
+  font-size: 1.6rem;
+}
+
+.welcome {
+  margin-left: 0.6em;
+}
+
+.init-message {
+  margin-left: 0.6em;
+  padding: 0.5em;
+}
+
+section {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  padding: 0.4rem 0.8rem;
+  background-color: rgba(0, 0, 0, 0.4);
+  flex-grow: 1;
+}
+
+.login-b:hover {
+  border-color: rgb(27, 204, 8);
+  border-width: 4px;
+  border-style: solid;
+  cursor: pointer;
+}
+
+footer {
+  padding: 0.25em;
+  background-color: #060606eb;
+  color: aliceblue;
+  display: grid;
+  place-content: center;
+  font-size: 0.85rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  flex-grow: 1;
+  padding-bottom: 1rem;
+}
+
+.user-list {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0.35em;
+  width: 100%;
+}
+
+.user-list li {
+  margin: 0.7em 0 0 0;
+}
+
+.user-lists {
+  position: relative;
+}
+
+.App .user-lists ul {
+  padding: 0;
+}
+
+.user-lists-title {
+  max-width: 350px;
+}
+
+.menu-btn {
+  margin: 0;
+  width: 48px;
+  height: 48px;
+  position: absolute;
+  top: 6px;
+  right: 6px;
+}
+
+.load-list-btn {
+  flex-grow: 1;
+  margin: 0;
+}
+
+.load-list-btn:hover {
+  cursor: pointer;
+  scale: 1.015;
+}
+.trash-icon:hover {
+  cursor: pointer;
+  scale: 1.05;
+}
+
+.item {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0.5rem 0.2rem 0.5rem 0.5rem;
+  margin: 0.25rem 0.35rem;
+  background-color: #eee;
+  border-radius: 10px;
+}
+
+.item input[type="checkbox"] {
+  text-align: center;
+  width: 2.5rem;
+  width: 48px;
+  min-width: 48px;
+  height: 2.5rem;
+  height: 48px;
+  min-height: 48px;
+  cursor: pointer;
+  margin-right: 0.5rem;
+}
+
+.item input[type="checkbox"]:focus + label {
+  text-decoration: underline;
+}
+
+.item > label {
+  font-size: 1rem;
+  flex-grow: 1;
+  color: #000;
+  margin: 0;
+}
+
+.item svg {
+  width: 48px;
+  min-width: 48px;
+  height: 36px;
+  font-size: 1rem;
+  color: steelblue;
+  cursor: pointer;
+}
+
+.item svg:focus,
+.item svg:hover {
+  color: red;
+  outline: none;
+}
+
+a {
+  color: #fff;
+}
+
+input[type="text"],
+input[type="password"],
+button,
+textarea {
+  font-family: "Nunito", sans-serif;
+  font-size: 22px;
+  padding: 0.25rem;
+  border-radius: 0.5rem;
+}
+
+label,
+button {
+  margin-top: 0.7rem;
+}
+
+button {
+  padding: 0.5rem;
+}
+
+li {
+  list-style-type: none;
+}
+
+.instructions {
+  font-size: 0.75rem;
+  border-radius: 0.5rem;
+  background: #000;
+  color: #fff;
+  padding: 0.25rem;
+  position: relative;
+  bottom: -10px;
+}
+
+.instructions > svg {
+  margin-right: 0.25rem;
+}
+
+.listname-label {
+  font-size: 1.4em;
+  margin-top: 13vh;
+}
+
+.new-list {
+  justify-content: unset;
+  flex-grow: 1;
+}
+
+.new-list input {
+  margin-top: 10vh;
+}
+
+.new-list button[type="submit"] {
+  margin-bottom: 5%;
+  color: #000;
+  height: auto;
+  border-width: 3px;
+  position: absolute;
+  bottom: 24px;
+  right: 18px;
+  padding: 0.8em;
+}
+
+.new-list button:hover {
+  border-color: rgb(27, 204, 8);
+}
+
+.offscreen {
+  position: absolute;
+  left: -9999px;
+}
+
+.hide {
+  display: none;
+}
+
+.valid {
+  color: limegreen;
+  margin-left: 0.25rem;
+}
+
+.invalid {
+  color: red;
+  margin-left: 0.25rem;
+}
+
+.errmsg {
+  background-color: lightpink;
+  color: firebrick;
+  font-weight: bold;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.line {
+  display: inline-block;
+}
+
+.flexGrow {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
+.persistCheck {
+  font-size: 0.75rem;
+  margin-top: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
+.persistCheck label {
+  margin: 0;
+}
+
+[type="checkbox"] {
+  height: 20px;
+  width: 20px;
+  margin: 0 5px 2px 2px;
+}
+
+.App main {
+  width: 100%;
+}
+
+.App ul {
+  padding: 0.25rem 0.25rem 0.25rem;
+}
+
+.search-user {
+  border-radius: 30%;
+  max-width: 50px;
+  max-height: 50px;
+  padding: 0.3em;
+}
+
+.addForm {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  max-height: 80px;
+  margin: 0 0 0.15rem;
+  padding: 0.25rem 0.5rem 0.45rem;
+  border-bottom: 1px solid #eee;
+}
+.addForm label {
+  position: absolute;
+  left: -99999px;
+}
+
+.addForm button {
+  margin: 0;
+}
+
+.addForm input[type="text"] {
+  flex-grow: 1;
+  max-width: calc(100% - 50px);
+  min-height: 48px;
+  font-size: 1rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
+  margin-right: 0.25rem;
+  outline: none;
+}
+
+.searchForm {
+  width: 100%;
+  max-height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  margin: 0.15rem 0 0.15rem;
+  padding: 0.3rem 0.5rem 0.45rem;
+  border-bottom: 1px solid #eee;
+}
+
+.searchForm label {
+  position: absolute;
+  left: -99999px;
+}
+
+.searchForm input[type="text"] {
+  flex-grow: 1;
+  max-width: 100%;
+  min-height: 48px;
+  font-size: 1rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
+  outline: none;
+}
+
+button[type="submit"] {
+  height: 48px;
+  min-width: 48px;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  font-size: 1rem;
+  background-color: aliceblue;
+  color: mediumblue;
+  cursor: pointer;
 }
